# POC-vite

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  SECURITY.md  Taskfile.yml  index.html  mkdocs.yml  package.json  pyproject.toml  sonar-project.properties  vite.config.ts
.chglog/: config.yml
.ci/config/: .terraform-docs.yml
.ci/linters/: .commitlintrc.json  .eslintrc.cjs  .gitleaks.toml  .golangci.yml  .goreleaser.yml  .pylintrc  markdown-link-config.json  prettier.config.cjs  tsconfig.json
.gitlab/ci/: sonar.gitlab-ci.yml
.gitlab/merge_request_templates/: Documentation.md
docs/: authors.md  code_of_conduct.md  commands.md  components.md  contributing.md  env-vars.md  index.md  releasing.md  roadmap.md  usage.md
docs/contribute/: github-flow.md
docs/examples/: common.md
provision/generators/: README.yaml
provision/templates/: README.tpl.md
public/favicon/: site.webmanifest
src/: App.tsx  index.css  main.tsx
src/components/: index.ts
src/components/Button/: Button.module.css  Button.test.tsx  Button.tsx
src/components/Header/: Header.test.tsx  Header.tsx  header.module.css
src/components/Logo/: Logo.test.tsx  Logo.tsx  logo.module.css
src/components/Router/: Router.tsx
src/components/Spinner/: Spinner.tsx  spinner.module.css
src/redux/: hooks.ts  store.ts
src/redux/slices/: userSlice.ts
src/server/: index.ts
src/server/config/: constants.ts  index.ts
src/server/loaders/: logger.ts  sentry.ts
src/utils/: routes.tsx
src/utils/assets/: index.ts
(+12 files in other folders)
